--- a/A01_RandomPoem/RandomPoem.html
+++ b/A01_RandomPoem/RandomPoem.html
@@ -8,6 +8,12 @@
     <script src="./script.js"></script>
 </head>
 <body>
-Open console press "F12"
+    <header>Open console press "F12"</header>
+<img src="./IMG_2591.jpeg" alt=""
+width="400" 
+height="500">
+<img src="./IMG_2592.jpeg" alt=""
+width="400" 
+height="500">
 </body>
 </html>
