--- a/A02_EventInspector/index.html
+++ b/A02_EventInspector/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <h1>Events-Exercise</h1>
     <div id="div0"></div>
     <div id="div1"></div>
-    <span></span>
+    <span id="mouseText">
+        <p id="x"></p>
+        <p id="y"></p>
+        <p id="object"></p>
+    </span>
 </body>
 </html>
