--- a/A02_EventInspector/index.html
+++ b/A02_EventInspector/index.html
@@ -12,10 +12,6 @@
     <h1>Events-Exercise</h1>
     <div id="div0"></div>
     <div id="div1"></div>
-    <span id="mouseText">
-        <p id="x"></p>
-        <p id="y"></p>
-        <p id="object"></p>
-    </span>
+    <span id="mouseText"></span>
 </body>
 </html>
