--- a/A02_EventInspector/index.html
+++ b/A02_EventInspector/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Events-Exercise</h1>
     <div id="div0"></div>
-    <div id="div1"></div>
+    <div id="div1"><button>X</button></div>
     <span id="mouseText"></span>
 </body>
 </html>
