--- a/A02_EventInspector/index.html
+++ b/A02_EventInspector/index.html
@@ -13,5 +13,6 @@
     <div id="div0"></div>
     <div id="div1"><button>PUSH</button></div>
     <span id="mouseText"></span>
+    <a href="./IMG_2607.jpeg" target="_blank">Activity diagram</a>
 </body>
 </html>
