--- a/A03_ShoppingList/index.html
+++ b/A03_ShoppingList/index.html
@@ -13,7 +13,7 @@
         <input class="textField" type="text">
         <input class="textField" type="number">
         <input class="textField" type="text">
-        <button id="addButton"></button>
+        <button id="addButton"><b>ADD</b></button>
     </div>
     <h2>Overview</h2>
     <div id="shoppingList"></div>
