--- a/A03_ShoppingList/index.html
+++ b/A03_ShoppingList/index.html
@@ -10,12 +10,22 @@
 <body>
     <h1>Shopping List</h1>
     <div id="addToList">
-        <input class="textField" type="text">
-        <input class="textField" type="number">
-        <input class="textField" type="text">
+        <input class="textField" type="text" placeholder="ITEM NAME">
+        <input class="textField" type="number" placeholder="AMOUNT">
+        <input class="textField" type="text" placeholder="COMMENT">
         <button id="addButton"><b>ADD</b></button>
     </div>
     <h2>Overview</h2>
-    <div id="shoppingList"></div>
+    <div id="shoppingList">
+    <div class="itemInfo">
+        <input type="checkbox" name="" id="bought">
+        <span id="itemName">Item-Name</span>
+        <span id="amount">Amount</span>
+        <span id="comment">Comment</span>
+        <span id="date">Date</span>
+        <button id="editButton">Edit</button>
+        <button id="deleteButton">Delete</button>
+    <div>
+    </div>
 </body>
 </html>
