--- a/A03_ShoppingList/index.html
+++ b/A03_ShoppingList/index.html
@@ -13,18 +13,18 @@
         <input class="textField" type="text" placeholder="ITEM NAME">
         <input class="textField" type="number" placeholder="AMOUNT">
         <input class="textField" type="text" placeholder="COMMENT">
-        <button id="addButton"><b>ADD</b></button>
+        <button id="addButton"><b>+</b></button>
     </div>
     <h2>Overview</h2>
     <div id="shoppingList">
     <div class="itemInfo">
         <input type="checkbox" name="" id="bought">
-        <span id="itemName">Item-Name</span>
+        <span id="itemName">Item</span>
         <span id="amount">Amount</span>
         <span id="comment">Comment</span>
         <span id="date">Date</span>
         <button id="editButton">Edit</button>
-        <button id="deleteButton">Delete</button>
+        <button id="deleteButton">-</button>
     <div>
     </div>
 </body>
