--- a/A03_ShoppingList/index.html
+++ b/A03_ShoppingList/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <h1>Shopping List</h1>
     <div id="addToList">
-        <input class="textField" type="text" placeholder="ITEM NAME">
+        <input class="textField" type="text" placeholder="ITEM">
         <input class="textField" type="number" placeholder="AMOUNT">
         <input class="textField" type="text" placeholder="COMMENT">
         <button id="addButton"><b>+</b></button>
@@ -19,10 +20,10 @@
     <div id="shoppingList">
     <div class="itemInfo">
         <input type="checkbox" name="" id="bought">
-        <span id="itemName">Item</span>
-        <span id="amount">Amount</span>
-        <span id="comment">Comment</span>
-        <span id="date">Date</span>
+        <span id="itemName">Milk</span>
+        <span id="amount">1</span>
+        <span id="comment">bottle</span>
+        <span id="date">29.10.2022</span>
         <button id="editButton">Edit</button>
         <button id="deleteButton">-</button>
     <div>
