--- a/A03_ShoppingList/index.html
+++ b/A03_ShoppingList/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Shopping List</h1>
     <div id="addToList">
-        <input class="textField" type="text" placeholder="ITEM">
-        <input class="textField" type="number" placeholder="AMOUNT">
-        <input class="textField" type="text" placeholder="COMMENT">
+        <input id="item" class="textField" type="text" placeholder="ITEM">
+        <input id="amount" class="textField" type="number" placeholder="AMOUNT">
+        <input id="comment" class="textField" type="text" placeholder="COMMENT">
         <button id="addButton"><b>+</b></button>
     </div>
     <h2>Overview</h2>
