--- a/A03_ShoppingList/index.html
+++ b/A03_ShoppingList/index.html
@@ -9,6 +9,7 @@
     <script src="./script.js"></script>
 </head>
 <body>
+    <a href="./IMG_2619.jpeg" target="_blank">Skizzen</a>
     <h1>Shopping List</h1>
     <div id="addToList">
         <input id="item" class="textField" type="text" placeholder="ITEM">
