--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,9 +15,11 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
-	<a href="https://robert99s.github.io/EIA2-WiSe22/A01_RandomPoem/RandomPoem.html" target="_blank">Link zu Aufgabe 1</a>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A01_RandomPoem/RandomPoem.html" target="_blank">Random Poem</a>
 	<br>
-	<a href="https://robert99s.github.io/EIA2-WiSe22/A02_EventInspector/index.html" target="_blank">Link zu Aufgabe 2</a>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A02_EventInspector/index.html" target="_blank">Event Inspector</a>
+	<br>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A03_ShoppingList/index.html" target="_blank">Shopping List</a>
 	<br>
 </body>
 </html>
