--- a/A05_EinkaufslisteClient/index.html
+++ b/A05_EinkaufslisteClient/index.html
@@ -23,12 +23,9 @@
     </form>
 
     <h2>Overview</h2>
-    <li id="shoppingList"></li>
+    <li id="list"></li>
 </body>
 <footer>
-    <a href="./IMG_2643.jpeg" target="_blank">Skizze1</a>
-    <a href="./IMG_2644.jpeg" target="_blank">Skizze2</a>
-    <a href="./IMG_2645.jpeg" target="_blank">Skizze3</a>
-    <a href="./IMG_2646.jpeg" target="_blank">Skizze4</a>
+    <a href="" target="_blank">Skizzen</a>
 </footer>
 </html>
