--- a/A05_EinkaufslisteClient/index.html
+++ b/A05_EinkaufslisteClient/index.html
@@ -26,6 +26,7 @@
     <li id="list"></li>
 </body>
 <footer>
-    <a href="" target="_blank">Skizzen</a>
+    <a href="./IMG_2667.jpeg" target="_blank">Skizzen1/2</a>
+    <a href="./IMG_2668.jpeg" target="_blank">Skizzen2/2</a>
 </footer>
 </html>
