--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,6 +15,8 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A05_EinkaufslisteClient/index.html" target="_blank">Einkaufsliste Client</a>
+	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A04_DataStructure/index.html" target="_blank">Data Structure</a>
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A03_ShoppingList/index.html" target="_blank">Shopping List</a>
