--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,6 +15,8 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A08_GenerativeKunst/index.html" target="_blank">Generative Kunst</a>
+	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A06_Einkaufsliste_DatabaseServer/index.html" target="_blank">Einkaufsliste DatabaseServer</a>
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A05_EinkaufslisteClient/index.html" target="_blank">Einkaufsliste Client</a>
