--- a/A08_2_Vogelhaus/index.html
+++ b/A08_2_Vogelhaus/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     <canvas width="335px" height="667px"></canvas>
+    <a href="./IMG_2748.jpeg" target="_blank">Skizzen1/4</a>
+    <a href="./IMG_2749.jpeg" target="_blank">Skizzen2/4</a>
+    <a href="./IMG_2750.jpeg" target="_blank">Skizzen3/4</a>
+    <a href="./IMG_2751.jpeg" target="_blank">Skizzen4/4</a>
 </body>
 </html>
