--- a/A09_1_OldMacDonaldsFarm/index.html
+++ b/A09_1_OldMacDonaldsFarm/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OldMacDonaldsFarm</title>
+    <title>Old McDonald Farm</title>
+    <script src="./script.js"></script>
+    <script src="./animal.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Leider geht die Ausgabe nur über die Konsole, daher wurde auch ein Aufschub benötigt -> Button drücken und siehe Konsole -> next Day funktioniert</h1>
+   <main></main> 
 </body>
 </html>
