--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,7 +15,8 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
-	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_1_OldMacDonaldsFarm" target="_blank">Vogelhaus</a>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_1_OldMacDonaldsFarm" target="_blank">OldMacDonaldsFarm</a>
+	<a href="./A09_1_OldMacDonaldsFarm/Konzept_L09.pdf" target="_blank"></a> 
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A08_2_Vogelhaus/index.html" target="_blank">Vogelhaus</a>
 	<br>
