--- a/A09_2_Vogelhaus_Classes/index.html
+++ b/A09_2_Vogelhaus_Classes/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="./script.js"></script>
+    <script src="./vector.js"></script>
+    <script src="./snowflake.js"></script>
+    <script src="./flyingBirds.js"></script>
     <title>Vogelhaus</title>
 </head>
 <body>
