--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -16,6 +16,7 @@ body {
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_2_Vogelhaus_Classes" target="_blank">VogelhausClasses</a>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_2_Vogelhaus_Classes" target="_blank">Konzepte VogelhausClasses</a> 
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_1_OldMacDonaldsFarm" target="_blank">OldMacDonaldsFarm</a>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_1_OldMacDonaldsFarm/Konzept_L09.pdf" target="_blank">Konzepte Farm</a> 
