--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,6 +15,8 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A10_2_PolymorphieAnimation" target="_blank">PolymorphieAnimation</a>
+	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A10_1_OldMacDonaldsHeritage/Konzept_10_1-1.pdf" target="_blank">Konzept A10_1</a>
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A09_2_Vogelhaus_Classes" target="_blank">VogelhausClasses</a>
