--- a/A10_2_PolymorphieAnimation/index.html
+++ b/A10_2_PolymorphieAnimation/index.html
@@ -13,6 +13,6 @@
     <title>Vogelhaus</title>
 </head>
 <body>
-    <canvas width="335px" height="667px"></canvas>
+    <canvas id="canvas" width="335px" height="667px"></canvas>
 </body>
 </html>
