--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -16,6 +16,7 @@ body {
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A10_2_PolymorphieAnimation" target="_blank">PolymorphieAnimation</a>
+	<a href="https://robert99s.github.io/EIA2-WiSe22/A10_2_PolymorphieAnimation/Konzept_10_2.pdf" target="_blank">Konzept</a>
 	<br>
 	<a href="https://robert99s.github.io/EIA2-WiSe22/A10_1_OldMacDonaldsHeritage/Konzept_10_1-1.pdf" target="_blank">Konzept A10_1</a>
 	<br>
