--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,10 +14,9 @@ body {
 <body>
 
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="./EIA2Endabgabe2/FireworkSimulator.html" target="_blank">Endabgabe HTML</a>
 	<a href="https://github.com/Robert99s/EIA2Endabgabe2" target="_blank">Endabgabe Repository</a>
-	<a href="https://robert99s.github.io/EIA2-WiSe22/EIA2Endabgabe2/FireworkSimulator.html" target="_blank">Endabgabe</a>
-	<a href="https://github.com/Robert99s/EIA2Endabgabe2/blob/main/KonzepteEndabgabeEIA2.pdf" target="_blank">EndabgabeKonzepte</a>
+	<a href="https://robert99s.github.io/EIA2Endabgabe2/FireworkSimulator.html" target="_blank">Endabgabe HTML</a>
+	<a href="https://github.com/Robert99s/EIA2Endabgabe2/blob/main/KonzepteEndabgabeEIA2.pdf" target="_blank">Endabgabe Konzepte</a>
 	<br>
 	<a href="https://github.com/Robert99s/EIA2-WiSe22" target="_blank">Repository</a>
 	<br>
