--- a/Talkshow/index.html
+++ b/Talkshow/index.html
@@ -40,17 +40,15 @@
             <div class="portrait">
                 <img src="./shutterstock_editorial_10268475eg.png" alt="Portrait 3">
                 <h3>Jennifer Lawrence</h3>
-                <p>ist eine preisgekrönte Schauspielerin, die für ihre Leistungen in Hollywood-Filmen bekannt ist und für ihre Authentizität und Vielseitigkeit geschätzt wird.
-
-
-
-                </p>
+                <p>ist eine preisgekrönte Schauspielerin, die für ihre Leistungen in Hollywood-Filmen bekannt ist und für ihre Authentizität und Vielseitigkeit geschätzt wird.</p>
             </div>
-            <!-- Weitere Portraits und Vorstellungstexte hier einfügen -->
+        
         </div>
         <div class="subheadings">
             <h2>Projektbeschreibung</h2>
             <p>My Talk ist eine webbasierte Anwendung, die wir prototypisch mit Adobe XD umgesetzt haben. In der Anwendung haben die Nutzer die Möglichkeit mit drei bekannten Persönlichkeiten ein Gespräch zu führen. Die Stimmen sind AI-generiert, dabei handelt es sich um ein Deep-fake und muss auch so gekennzeichnet werden. Es dient zur Unterhaltung, dabei steht der Spaß, das Vergnügen, die Freude und Begeisterung im Vordergrund. Durch die AI-generierten Stimmen vermittelt es den Rezipienten ein Gefühl von Nähe zu den Persönlichkeiten. Auch wenn diese Technik noch relativ neu und am Anfang der Entwicklung steht, zeigen wir zugleich welch enormes Potenzial in ihr steckt. In unserer Anwendung haben wir die Tools fakeyou.com und voicify.ai genutzt. Dies hat zum einen preisliche als auch qualitative Gründe. Je besser die Qualität, desto höher der Preis. Bei diesen beiden Anbieter haben wir einen guten Kompromiss gefunden. </p>
+            <h2>Medium/technisches Setup</h2>
+            <p>Die Anwendung ist für unsere Zielgruppe ganz einfach online abrufbar. Wir empfehlen die Nutzung eines Laptops oder PCs. Die Web-Anwendung ist auch von einem mobilen Endgerät abrufbar, jedoch nicht optimiert. Neben den bisherig genannten Komponenten werden noch Lautsprecher oder Kopfhörer benötigt, um die Antworten anhören zu können.</p>
             <h2>Kontext</h2>
             <p>„Stars“ sind für uns Menschen nur schwer greifbar. Durch den Nutzen von AI können wir dies auf eine humorvolle Weise den Nutzern ermöglichen in Kontakt zu treten. Dabei stehen die Emotionen: Freude, Vergnügen und Begeisterung im Vordergrund. Die Anwendung dient der reinen Unterhaltung.</p>
             <h2>Entwurfsphase und Prototypisierung</h2>
@@ -66,7 +64,6 @@
             <h2>Ausblick der Arbeit</h2>
             <p>Die Arbeit zeigt welches Potenzial in AI steckt. Die Technik wird sich sicherlich in den nächsten Jahren weiter entwickeln, so dass die Qualität besser wird. Auch die Auswahlmöglichkeit an Stimmen wird weiterhin zunehmen. Die AI-Technik, die wir verwendet haben, hat noch viel Luft nach oben. Es wäre sicherlich auch spannend, wenn die Nutzer eigene Fragen stellen und individuelle Antworten erhalten können. Eine weitere Möglichkeit wäre es, die Berühmtheiten visuell während des Sprechens darzustellen. 
               Auf der Media Night wurden wir auf das Tool d-id.com aufmerksam. Wir hatten es uns angeschaut und fanden das Tool letztlich zu teuer, für die Masse an Sequenzen die wir benötigt hätten. Dieses Tool würde sicherlich dazu beitragen, dass wir unserer Zielgruppe noch mehr Unterhaltung bieten können.</p>
-            <!-- Weitere Unterüberschriften und Texte hier einfügen -->
         </div>
     </section>
 
