--- a/Talkshow/index.html
+++ b/Talkshow/index.html
@@ -21,7 +21,7 @@
     </header>
     <section class="content">
         <div class="link">
-            <a href="https://xd.adobe.com/view/6f16bd01-a2c9-49af-9075-cd6378a89719-3a45/screen/d1700977-f1ca-49a5-8ccf-30144c7e770d?fullscreen">Link zur Anwendung</a>
+            <a href="https://xd.adobe.com/view/6f16bd01-a2c9-49af-9075-cd6378a89719-3a45/screen/d1700977-f1ca-49a5-8ccf-30144c7e770d?fullscreen" target="_blank">Link zur Anwendung</a>
         </div>
         <div class="video-frame">
             <video controls loop src="./Bildschirmaufnahme 2024-02-06 um 14.46.18_1.mp4"></video>
