--- a/Talkshow/index.html
+++ b/Talkshow/index.html
@@ -18,11 +18,11 @@
             <h2>by<br>Jonas Atzenhofer & Robert Schindler</h2>
             <h3>Kreativkonzeption WiSe 23/24<br>Prof. Regina Reusch</h3>
         </div>
-    </header>
-    <section class="content">
         <div class="link">
             <a href="https://xd.adobe.com/view/6f16bd01-a2c9-49af-9075-cd6378a89719-3a45/screen/d1700977-f1ca-49a5-8ccf-30144c7e770d?fullscreen" target="_blank">Link zur Anwendung</a>
         </div>
+    </header>
+    <section class="content">
         <div class="video-frame">
             <video controls loop src="./Bildschirmaufnahme 2024-02-06 um 14.46.18_1.mp4"></video>
         </div>
@@ -30,25 +30,34 @@
             <div class="portrait">
                 <img src="./Donald Trump.jpg" alt="Portrait 1">
                 <h3>Donald Trump</h3>
-                <p>ist ein ehemaliger US-Präsident und Geschäftsmagnat, der durch seine unkonventionelle Politik und kontroverse Persönlichkeit bekannt ist.</p>
+                <details>
+                    <summary>Mehr erfahren</summary>
+                    <p>ist ein ehemaliger US-Präsident und Geschäftsmagnat, der durch seine unkonventionelle Politik und kontroverse Persönlichkeit bekannt ist.</p>
+                </details>
             </div>
             <div class="portrait">
                 <img src="./snoop-dogg-with-a-football-skqdfvuwepc73l4v.jpg" alt="Portrait 2">
                 <h3>Snoop Dogg</h3>
-                <p>ist ein legendärer amerikanischer Rapper, dessen Musik und Stil die Hip-Hop-Kultur geprägt haben und der auch als Schauspieler und Unternehmer erfolgreich ist.</p>
+                <details>
+                    <summary>Mehr erfahren</summary>
+                    <p>ist ein legendärer amerikanischer Rapper, dessen Musik und Stil die Hip-Hop-Kultur geprägt haben und der auch als Schauspieler und Unternehmer erfolgreich ist.</p>
+                </details>
             </div>
             <div class="portrait">
                 <img src="./shutterstock_editorial_10268475eg.png" alt="Portrait 3">
                 <h3>Jennifer Lawrence</h3>
-                <p>ist eine preisgekrönte Schauspielerin, die für ihre Leistungen in Hollywood-Filmen bekannt ist und für ihre Authentizität und Vielseitigkeit geschätzt wird.</p>
-            </div>
+                <details>
+                    <summary>Mehr erfahren</summary>
+                    <p>ist eine preisgekrönte Schauspielerin, die für ihre Leistungen in Hollywood-Filmen bekannt ist und für ihre Authentizität und Vielseitigkeit geschätzt wird.</p>
+                </details>
+                </div>
         
         </div>
         <div class="subheadings">
             <h2>Projektbeschreibung</h2>
             <p>My Talk ist eine webbasierte Anwendung, die wir prototypisch mit Adobe XD umgesetzt haben. In der Anwendung haben die Nutzer die Möglichkeit mit drei bekannten Persönlichkeiten ein Gespräch zu führen. Die Stimmen sind AI-generiert, dabei handelt es sich um ein Deep-fake und muss auch so gekennzeichnet werden. Es dient zur Unterhaltung, dabei steht der Spaß, das Vergnügen, die Freude und Begeisterung im Vordergrund. Durch die AI-generierten Stimmen vermittelt es den Rezipienten ein Gefühl von Nähe zu den Persönlichkeiten. Auch wenn diese Technik noch relativ neu und am Anfang der Entwicklung steht, zeigen wir zugleich welch enormes Potenzial in ihr steckt. In unserer Anwendung haben wir die Tools fakeyou.com und voicify.ai genutzt. Dies hat zum einen preisliche als auch qualitative Gründe. Je besser die Qualität, desto höher der Preis. Bei diesen beiden Anbieter haben wir einen guten Kompromiss gefunden. </p>
             <h2>Medium/technisches Setup</h2>
-            <p>Die Anwendung ist für unsere Zielgruppe ganz einfach online abrufbar. Wir empfehlen die Nutzung eines Laptops oder PCs. Die Web-Anwendung ist auch von einem mobilen Endgerät abrufbar, jedoch nicht optimiert. Neben den bisherig genannten Komponenten werden noch Lautsprecher oder Kopfhörer benötigt, um die Antworten anhören zu können.</p>
+            <p>Die Anwendung ist für unsere Zielgruppe ganz einfach online abrufbar. Wir empfehlen die Nutzung eines Laptops oder PCs. Neben den bisherig genannten Komponenten werden noch Lautsprecher oder Kopfhörer benötigt, um die Antworten anhören zu können.</p>
             <h2>Kontext</h2>
             <p>„Stars“ sind für uns Menschen nur schwer greifbar. Durch den Nutzen von AI können wir dies auf eine humorvolle Weise den Nutzern ermöglichen in Kontakt zu treten. Dabei stehen die Emotionen: Freude, Vergnügen und Begeisterung im Vordergrund. Die Anwendung dient der reinen Unterhaltung.</p>
             <h2>Entwurfsphase und Prototypisierung</h2>
